--- a/DATN - FrontEnd/public/css/header.css
+++ b/DATN - FrontEnd/public/css/header.css
@@ -1113,3 +1113,67 @@
     transform: translateY(0);
   }
 }
+
+/* Tìm kiếm */
+.dropdown-results {
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-height: 300px;
+  overflow-y: auto;
+  z-index: 1000;
+  margin-top: 45px;
+  padding: 0;
+  list-style: none;
+}
+
+.dropdown-item {
+  padding: 10px;
+  border-bottom: 1px solid #f1f1f1;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-item:last-child {
+  border-bottom: none;
+}
+
+.dropdown-link {
+  text-decoration: none;
+  color: #333;
+  display: flex;
+  width: 100%;
+}
+
+.dropdown-product {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.product-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-name {
+  font-size: 14px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.product-price {
+  font-size: 15px;
+  color: red;
+  margin: 0;
+}
